--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"start": "npm run build && node dist/main.bundle.js",
 		"build": "webpack --config webpack.config.js"
 	},
 	"keywords": [],
